# histogram-equalization

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CPU/: CMakeLists.txt
CPU/inc/: contrast.h  utils.h
CPU/src/: contrast.cpp  source.cpp  utils.cpp
CUDANaive/: CMakeLists.txt
CUDANaive/inc/: utils.cuh
CUDANaive/src/: contrast.cu  main.cu  utils.cu
CUDAOptimized/: CMakeLists.txt
CUDAOptimized/inc/: contrast.cuh  utils.cuh
CUDAOptimized/src/: contrast.cu  main.cu
CUDASharedMem/: CMakeLists.txt
CUDASharedMem/inc/: contrast.cuh  utils.cuh
CUDASharedMem/src/: contrast.cu  main.cu  utils.cu
